--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1990,8 +1990,8 @@ input, select, textarea {
 	button,
 	.button {
 		background-color: transparent;
-		box-shadow: inset 0 0 0 2px #2388fa;
-		color: #2388fa !important;
+		box-shadow: inset 0 0 0 2px #ad00ab;
+		color: #ad00ab !important;
 	}
 
 		input[type="submit"]:hover,
@@ -1999,7 +1999,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(35, 136, 250, 0.1);
+			background-color: rgba(255, 0, 157, 0.1);
+			
 		}
 
 			input[type="submit"]:hover:active,
@@ -4549,6 +4550,7 @@ input, select, textarea {
 	display:flex;
 	align-items: center;
 }
+
 	#banner {
 		background-color: #0d0d0d;
 		color: rgba(255, 255, 255, 0.65);
@@ -4611,7 +4613,7 @@ input, select, textarea {
 		#banner .button {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #2388fa;
-			color: #2388fa !important;
+			color: #d623fa !important;
 			box-shadow: inset 0 0 0 2px #ffffff;
 			color: #ffffff !important;
 		}
@@ -4971,6 +4973,15 @@ input, select, textarea {
 				width:18em;
 			}
 				}
+
+		@media screen and (max-width: 1910px){
+					.container > img {
+						width:17em;
+					}
+					#banner > article.full{
+						min-height: 60vh;
+					}
+						}
 
 		@media screen and (max-width: 1480px){
 					.container > img {
